@@ -6,6 +6,7 @@
  * add response_type parameter to the ServiceBuilder/OAuthConfig to use not only "code" for authorization code
  * remove Verifier object, we just need Strings, 'code' for OAuth2 and 'oauthVerifier' for OAuth1
  * default HTTP verb for OAuth 2.0 Access Token EndPoint is POST (http://tools.ietf.org/html/rfc6749#section-3.2)
+ * send missed headers in async version (as in sync)
 
 [2.3.0]
  * Stack Exchange authentication via OAuth 2.0 (stackoverflow.com, askubuntu.com, etc.).
